/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

syntax = "proto3";

import "system/guid.proto";
import "dolittle/interaction/events.relativity/versioned_event_source.proto";
import "dolittle/interaction/events.relativity/event_envelope.proto";

package dolittle.events.relativity;

option csharp_namespace = "Dolittle.Runtime.Grpc.Interaction";

// Represents a committed event stream
message CommittedEventStream {
    VersionedEventSource source = 1;
    uint64 sequence = 2;
    guid id = 3;
    int64 timeStamp = 4;
    guid correlationId = 5;
    repeated EventEnvelope events = 6;
}