/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

syntax = "proto3";

import "system/guid.proto";
import "dolittle/interaction/events.relativity/artifact.proto";
import "dolittle/interaction/events.relativity/versioned_event_source.proto";

package dolittle.events.relativity;

option csharp_namespace = "Dolittle.Runtime.Events.Relativity.Protobuf";

// Represents the metadata related to an event
message EventMetadata {
    VersionedEventSource source = 1;
    guid correlationId = 2;
    Artifact artifact = 3;
    string causedBy = 4;
    int64 occurred = 5;
}