/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

syntax = "proto3";

import "system/value.proto";

package dolittle.events.relativity;

option csharp_namespace = "Dolittle.Runtime.Events.Relativity.Protobuf";

// Represents the artifact
message PropertyBag {
    map<string, Value> propertyBag = 1;
}